# -june-gloom

./: .gitignore  DESIGN_HANDOFF.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  inspect.yml  pages.yml  season-report.yml  today.yml  window-sweep.yml
analysis/: season-2021-report.md  season-2022-report.md  season-2023-report.md  season-2024-report.md  season-2025-report.md  today-debug.md  today.md  window-sweep.md
notebooks/: 01_explore_june_gloom.ipynb
scripts/: build_site.py  inspect-today.mjs  score-season.mjs  today.mjs  window-sweep.mjs
src/june_gloom/: __init__.py  analyze.py  fetch.py  plots.py
tests/: test_analyze.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: CityBreakdown.tsx  Count.tsx  DynamicBackground.tsx  HallOfChampions.tsx  Methodology.tsx  PasswordGate.tsx  Scoreboard.tsx  SeasonGrid.tsx  TodayGame.tsx  TrendChart.tsx  icons.tsx
web/src/data/: history.json
web/src/lib/: confetti.ts  gloom.test.ts  gloom.ts  mood.ts  openMeteo.ts  teams.ts  types.ts  useSeason.ts
